--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,23 +1,20 @@
 {
   "header.title": "Angular training",
-  "header.addUser": "+ Add User",
 
   "sidebar.home":"Home",
   "sidebar.manageUsers":"Manage users",
 
   "welcome.message":"Welcome to this test application!",
 
-  "users.list": "List of Users",
-  "users.loading": "Loading users...",
-  "users.pagination.previous": "",
-  "users.pagination.next": "",
-  "users.action": "Action",
-  "users.action.update": "Update",
-  "users.action.delete": "Delete",
-  "users.id":"Id",
-  "users.avatar" :"Avatar",
-  "users.firstName":"First Name",
-  "users.lastName":"Last Name",
-  "users.email":"Email adresse"
+  "user.addUser": "+ Add a user",
+  "user.id":"Id",
+  "user.avatar" :"Avatar",
+  "user.firstName":"First name",
+  "user.lastName":"Last name",
+  "user.email":"Email adress",
+  "user.update": "Update",
+  "user.delete": "Delete",
+  "user.action": "Action",
+  "user.title": "Manage users"
 }
 
