--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,23 +1,20 @@
 {
   "header.title": "Formation Angular",
-  "header.addUser": "+ Add User",
 
-  "sidebar.home":"Home",
-  "sidebar.manageUsers":"Manage users",
+  "sidebar.home":"Accueil",
+  "sidebar.manageUsers":"Gestion des utilisateurs",
 
-  "welcome.message":"Welcome to this test application!",
+  "welcome.message":"Bienvenue dans cette application de test!",
 
-  "users.list": "List of Users",
-  "users.loading": "Loading users...",
-  "users.pagination.previous": "",
-  "users.pagination.next": "",
-  "users.action": "Action",
-  "users.action.update": "Update",
-  "users.action.delete": "Delete",
-  "users.id":"Id",
-  "users.avatar" :"Avatar",
-  "users.firstName":"First Name",
-  "users.lastName":"Last Name",
-  "users.email":"Email adresse"
+  "user.addUser": "+ Ajouter un utilisateur",
+  "user.id":"Id",
+  "user.avatar" :"Avatar",
+  "user.firstName":"Prenom",
+  "user.lastName":"Nom",
+  "user.email":"Adresse e-mail",
+  "user.update": "Modifier",
+  "user.delete": "Supprimer",
+  "user.action": "Action",
+  "user.title": "Gestion des utilisateurs"
 }
 
