--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,7 +26,14 @@
       "update": "Update",
       "delete": "Delete",
       "action": "Action"
-    }
+    },
 
+    "add_user" : {
+      "title" : "Add a new user"
+    },
+
+    "update_user" : {
+      "title" : "Update user"
+    }
   }
 }
